--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@ layout: default
 
 <div class="home">
 
+<h1>Browser Security Enhancement Tracker Project</h1>
+<div>
+  We are slowly moving our lives from desktop applications to browser based application and browsers have become an integral part of our life. Current top browsers have a special focus on security and have been working on many major security projects to kill bug classes. Some are ambitious projects some are smaller tweaks. Some continue to become the core of the browser some projects get shelved or discarded.
+</div>
+<br />
+<div>
+  This brings in an interesting situation for information security professionals as our recommendations and risk ratings can get affected by these changes. We have been trying to keep a tab on these changes internally and we realized that it makes sense to make this information public. So without further ado we present you Browser Security Enhancement List
+  </div>
+
+<br />
+
 <h1 class="page-heading">Browser Security Enhancements List</h1>
-<hr/>
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
       <!--<th>ID</th>-->
-      <th>Title</th>
+      <th class="first_element" >Title</th>
       <th>Description</th>
-	  <th>Browser(s)</th>
+	  <th class="last_element">Browser(s)</th>
 	  <!--<th>Reference(s)</th>-->
     </tr>
   </thead>
