--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
 
 <br />
 <div>
-  This is an ongoing effort and more details will be added over time. Contributions are welcome via <a href="" target="_blank">github issues / pull requests</a>
+  This is an ongoing effort and more details will be added over time. Contributions are welcome via <a href="https://github.com/NotSoSecure/browser-security-enhancements/" target="_blank">github issues / pull requests</a>
 </div>
 
 <!--<div class="home">
